...

  'main.settings.account.displayName': 'Display name',

  'main.settings.account.email.change': 'Change email',
  'main.settings.account.email.fail': 'Changing email failed!',
  'main.settings.account.email.fieldTitle': 'Email',
  'main.settings.account.email.invalid': 'Invalid email address',
  'main.settings.account.email.missing': 'no email',
  'main.settings.account.email.success': 'Changing email succeeded!',
  'main.settings.account.email.title': 'Email',

  'main.settings.account.password.button': 'Change password',
  'main.settings.account.password.current': 'Current password',
...
  'onboarding.welcome.text5': 'If you are under 17, you can visit:',
  'onboarding.welcome.text6': 'We hope you will enjoy the service!',
  'onboarding.welcome.title': 'Hello!',

  'tabs.chats': 'Chats',
  'tabs.mentors': 'Mentors',
  'tabs.settings': 'Settings',
};

