...
};

const TabMap: Array<TabSettings> = [
  {
    iconSelected: require('../images/cog.svg'),
    iconInactive: require('../images/cog-thin.svg'),
    text: localization.trans('tabs.settings'),
    testID: 'tabs.settings',
  },
  {
    iconSelected: require('../images/users.svg'),
    iconInactive: require('../images/users-thin.svg'),
    text: localization.trans('tabs.mentors'),
...
