...
          </RN.Text>
        </RN.View>
        <RN.View style={styles.blob}>
          <UnseenDot
            hasUnseen={hasNewMessages}
            style={styles.dot}
            testID="main.buddyList.button.unseenDot"
          />
          {mentor?.is_vacationing ? (
            <RN.Image
              source={require('../../images/umbrella-beach.svg')}
              style={[styles.icon, styles.vacationIcon]}
            />
...
