...
        />
      </RN.View>
      <RN.TouchableOpacity
        onPress={onSend}
        disabled={isSendingDisabled}
        style={styles.send}
        testID={'main.chat.input.button'}
      >
        {showPending ? (
          <Spinner />
        ) : (
          <RN.Image
            source={require('../../images/send.svg')}
...
