...
    >
      <SafeAreaView style={styles.safeArea}>
        {!onPress ? null : (
          <RN.TouchableOpacity
            style={styles.chevronButton}
            onPress={onPress}
            testID={'chat.back.button'}
          >
            <RN.Image
              source={require('../../images/chevron-left.svg')}
              style={styles.chevronIcon}
            />
          </RN.TouchableOpacity>
...
